--- a/README.rdoc
+++ b/README.rdoc
@@ -1,25 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Time is money; track your spending.
 
-Things you may want to cover:
+Timekeep is an mobile web app that I created to help me track how much time I spend on various activities. 
 
-* Ruby version
+Once you create an account, you can use the timeline to create categories and enter your activities. You can see the patterns of time expense in the analysis tab on a per day view or an overall view per period. 
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
+Later I plan to include ways to slice data by hour to see what you spend doing most often on which hour of the day.
 
 * ...
 
